@@ -783,10 +783,19 @@ name|AMRMTOKEN_SECRET_MANAGER_NODE
 init|=
 literal|"AMRMTokenSecretManagerNode"
 decl_stmt|;
+annotation|@
+name|VisibleForTesting
 DECL|field|fs
 specifier|protected
 name|FileSystem
 name|fs
+decl_stmt|;
+annotation|@
+name|VisibleForTesting
+DECL|field|fsConf
+specifier|protected
+name|Configuration
+name|fsConf
 decl_stmt|;
 DECL|field|rootDirPath
 specifier|private
@@ -947,17 +956,16 @@ block|{
 comment|// create filesystem only now, as part of service-start. By this time, RM is
 comment|// authenticated with kerberos so we are good to create a file-system
 comment|// handle.
-name|Configuration
-name|conf
-init|=
+name|fsConf
+operator|=
 operator|new
 name|Configuration
 argument_list|(
 name|getConfig
 argument_list|()
 argument_list|)
-decl_stmt|;
-name|conf
+expr_stmt|;
+name|fsConf
 operator|.
 name|setBoolean
 argument_list|(
@@ -969,7 +977,7 @@ expr_stmt|;
 name|String
 name|retryPolicy
 init|=
-name|conf
+name|fsConf
 operator|.
 name|get
 argument_list|(
@@ -982,7 +990,7 @@ operator|.
 name|DEFAULT_FS_RM_STATE_STORE_RETRY_POLICY_SPEC
 argument_list|)
 decl_stmt|;
-name|conf
+name|fsConf
 operator|.
 name|set
 argument_list|(
@@ -991,13 +999,73 @@ argument_list|,
 name|retryPolicy
 argument_list|)
 expr_stmt|;
+name|String
+name|scheme
+init|=
+name|fsWorkingPath
+operator|.
+name|toUri
+argument_list|()
+operator|.
+name|getScheme
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|scheme
+operator|==
+literal|null
+condition|)
+block|{
+name|scheme
+operator|=
+name|FileSystem
+operator|.
+name|getDefaultUri
+argument_list|(
+name|fsConf
+argument_list|)
+operator|.
+name|getScheme
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|scheme
+operator|!=
+literal|null
+condition|)
+block|{
+name|String
+name|disableCacheName
+init|=
+name|String
+operator|.
+name|format
+argument_list|(
+literal|"fs.%s.impl.disable.cache"
+argument_list|,
+name|scheme
+argument_list|)
+decl_stmt|;
+name|fsConf
+operator|.
+name|setBoolean
+argument_list|(
+name|disableCacheName
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
 name|fs
 operator|=
 name|fsWorkingPath
 operator|.
 name|getFileSystem
 argument_list|(
-name|conf
+name|fsConf
 argument_list|)
 expr_stmt|;
 name|mkdirsWithRetries
