@@ -736,6 +736,61 @@ argument_list|,
 literal|900L
 argument_list|)
 expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|store
+operator|.
+name|fs
+operator|.
+name|getConf
+argument_list|()
+operator|==
+name|store
+operator|.
+name|fsConf
+argument_list|)
+expr_stmt|;
+name|FileSystem
+name|previousFs
+init|=
+name|store
+operator|.
+name|fs
+decl_stmt|;
+name|store
+operator|.
+name|startInternal
+argument_list|()
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|store
+operator|.
+name|fs
+operator|!=
+name|previousFs
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|store
+operator|.
+name|fs
+operator|.
+name|getConf
+argument_list|()
+operator|==
+name|store
+operator|.
+name|fsConf
+argument_list|)
+expr_stmt|;
 return|return
 name|store
 return|;
